grammar/current_grammar.ebnf
(* # ===================================================================
# Adequate-C Language Grammar Specification
# ===================================================================
# Format: BNF (Backus-Naur Form)
# File extension: .ebnf (for GitHub syntax highlighting)
# Note: Grammar is still being worked on and includes future features
#       that may not be implemented for v1.0
# =================================================================== *)

<program> ::= <declaration-list>

<declaration-list> ::= <declaration> <declaration-list>
    ::= ε

<declaration> ::= <namespace>
    ::= <Struct>
    ::= <function>
    ::= ε

<namespace> ::= namespace <ident> { <declaration> }

<struct> ::= struct <ident> { <Struct_body> }
<struct-body> ::= <VarDec> <struct-body>
    ::= <struct-function> <struct-body>
    ::= ε
<struct-function> ::= <prototype> <struct-function-tail>
<struct-function-tail> ::= { <Stmt-list> }
    ::= ;

<function> ::= <prototype> { <Stmt-list> }
<prototype> ::= func <function-name> ( <param-list> ) -> <type>
<function-name> ::= <ident> <function-name-tail>
<function-name-tail> ::= :: <ident> <function-name-tail>
    ::= ε
<param-list> ::= <type> <ident> <param-list-tail>
    ::= ε
<param-list-tail> ::= , <type> <ident> <param-list-tail>
    ::= ε

<Stmt-list> ::= <Stmt> <Stmt-list>
    ::= ε

<Stmt> ::= <IfStmt>
    ::= <ForStmt>
    ::= <WhileStmt>
    ::= <AssignmentStmt>
    ::= <ReturnStmt>
    ::= <BreakStmt>
    ::= <ContinueStmt>
    ::= <VarDec>

<IfStmt> ::= if ( <Expr> ) { <Stmt-list> } <IfStmt-tail>
<IfStmt-tail> ::= else <elseStmt>
    ::= ε
<elseStmt> ::= <IfStmt>
    ::= { <Stmt-list> }

<ForStmt> ::= for ( <for-init> <Expr> ; <for-update> ) { <Stmt-list> }
<for-init> ::= <VarDec>
    ::= <AssignmentStmt>
<for-update> ::= <Expr>
    ::= ε

<WhileStmt> ::= while ( <Expr> ) { <Stmt-list> }

<AssignmentStmt> ::= <ident> <assignment-operator> <Expr> ;

<ReturnStmt> ::= return <ReturnStmt-tail>
<ReturnStmt-tail> ::= ;
    ::= <Expr> ;

<BreakStmt> ::= break ;

<ContinueStmt> ::= continue ;

<VarDec> ::= var <type> <ident> <VarDec-tail>
<VarDec-tail> ::= ;
    ::= = <Expr>;
    ::= [ <Expr> ] ;

<Expr> ::= <logical-or-expression> <Expr-tail>
<Expr-tail> ::= ? <Expr> : <Expr>
	::= ε

<logical-or-expression> ::= <logical-and-expression> <logical-or-expression-tail>
<logical-or-expression-tail> ::= || <logical-and-expression>
    ::= ε

<logical-and-expression> ::= <inclusive-or-expression> <logical-and-expression-tail>
<logical-and-expression-tail> ::= && <inclusive-or-expression>
    ::= ε

<inclusive-or-expression> ::= <exclusive-or-expression> <inclusive-or-expression-tail>
<inclusive-or-expression-tail> ::= | <exclusive-or-expression>
    ::= ε

<exclusive-or-expression> ::= <and-expression> <exclusive-or-expression-tail>
<exclusive-or-expression-tail> ::= ^ <and-expression>
    ::= ε

<and-expression> ::= <equality-expression> <and-expression-tail>
<and-expression-tail> ::= & <equality-expression>
	::= ε

<equality-expression> ::= <relational-expression> <equality-expression-tail>
<equality-expression-tail> ::= == <relational-expression>
    ::= != <relational-expression>
    ::= ε

<relational-expression> ::= <shift-expression> <relational-expression-tail>
<relational-expression-tail> ::= < <shift-expression>
      ::= > <shift-expression>
      ::= <= <shift-expression>
      ::= >= <shift-expression>
      ::= ε

<shift-expression> ::= <additive-expression> <shift-expression-tail>
<shift-expression-tail> ::= << <additive-expression>
    ::= >> <additive-expression>
    ::= ε

<additive-expression> ::= <multiplicative-expression> <additive-expression-tail>
<additive-expression-tail> ::= + <multiplicative-expression>
    ::= - <multiplicative-expression>
    ::= ε

<multiplicative-expression> ::= <unary-expression> <multiplicative-expression-tail>
<multiplicative-expression-tail> ::= * <unary-expression>
    ::= / <unary-expression>
    ::= % <unary-expression>
    ::= ε

<unary-expression> ::= <unary-operator> <postfix-expression>
	::= <postfix-expression>

<postfix-expression> ::= <primary-expression> <postfix-expression-tail>
<postfix-expression-tail> ::= [ <Expr> ]
    ::= ( <arg-list> )
    ::= . <ident>
    ::= :: <ident>
    ::= ++
    ::= --
    ::= ε

<arg-list> ::= <Expr> <arg-list-tail>
	::=    ε
<arg-list-tail> ::= , <Expr> <arg-list-tail>
	::=    ε

<primary-expression> ::= <ident>
    ::= <literal>
    ::= ( Expr )

<type> ::= const <type>
	::= static <type>
	::= struct <ident>
	::= <primitive-type>
<primitive-type> ::= int
    ::= string
    ::= char
    ::= bool
    ::= float
    ::= double
    ::= void

<assignment-operator> ::= =
    ::= *=
    ::= /=
    ::= %=
    ::= +=
    ::= -=
    ::= <<=
    ::= >>=
    ::= &=
    ::= ^=
    ::= |=

<unary-operator> ::= &
    ::= *
    ::= +
    ::= -
    ::= ~
    ::= !

<literal> ::= string_lit
    ::= char_lit
    ::= Int_lit
    ::= true
    ::= false
